ci: scope typecheck/lint/tests to challenges; exclude examples/snippets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,12 @@
     "types": ["node"],
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["node_modules", "**/node_modules", "**/.next", "**/dist"]
+  "exclude": [
+    "node_modules",
+    "**/node_modules",
+    "**/.next",
+    "**/dist",
+    "examples",
+    "snippets"
+  ]
 }
