--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "eslint": "^9.0.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "^14.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.0",
