--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "devDependencies": {
     "@types/node": "^20.11.0",
     "eslint": "8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-config-next": "^14.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.0",
